samples/_failures_safe/1761372517_e84d3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68ba6a69.c: In function ‘main’:
./samples/SAFE/__tmp_68ba6a69.c:173:5: error: expected declaration or statement at end of input
  173 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_68ba6a69.c:173:5: error: expected declaration or statement at end of input
